# CodeStat

./: .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  config.json  config.py  local_mcp_server.py  logging_config.py  main.py  pyproject.toml  requirements.txt  service_manager.py
cli/: __init__.py  exporter.py  main.py  menus.py  views.py
compute/: __init__.py  cache.py  diff_engine.py  lcs_engine.py  metrics_service.py
docs/: MCP自动数据采集规则.md
mcp/: __init__.py  agent_adapter.py  api_schemas.py  routes_after.py  routes_before.py  routes_tools.py
storage/: backup.py  db.py  models.py  scheduler.py
utils/: port_utils.py  time_utils.py
